# back

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/: __init__.py  auctions.py  mocks.py  orders.py  packs.py  payments.py  shops.py  transactions.py  users.py  ws.py
app/models/: auctions.py  mocks.py  orders.py  packs.py  payments.py  price.py  shops.py  transactions.py  users.py  wallets.py
tests/: test_main.py
