[tool.poetry]
name = "ecofood-back"
version = "0.1.0"
description = "Ecofood service"
authors = ["Agustin Gabrielli <agabrielli@fi.uba.ar>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.66.0" 
uvicorn = "^0.14.0"
python-dotenv = "^0.17.1"
pymongo = "^4.3.3"
requests = { version = "^2.28.2", optional = true }
black = { version = "^22.3.0", optional = true }
pytest = { version = "^6.2.5", optional = true }
pytest-cov = { version = "^2.11.1", optional = true }
mongomock = { version = "^4.1.2", optional = true }

[tool.poetry.extras]
dev = ["black", "pytest", "pytest-cov", "mongomock", "requests"]

[tool.black]
line-length = 88
skip-string-normalization = true